--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 VITE_SUPABASE_URL=your-supabase-url
 VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
+
+# Twitch API Configuration
+VITE_TWITCH_CLIENT_ID=your-twitch-client-id
+VITE_TWITCH_CLIENT_SECRET=your-twitch-client-secret
